# dwim_path_expand

./: Cargo.toml  Makefile  README.md  build.sh
examples/: play_movie.sh
src/: expander.rs  main.rs  rng.rs
