[package]
name = "dwim_path_expand"
version = "0.1.0"
authors = ["Brent Sanders <git@thoughtnoise.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Automagically (DWIM) expands incomplete file paths to the \"obvious\" files you (theoretically) meant to use."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.6.5"

[dependencies.clap]
version = "~2.33.0"
default-features = false
features = [ "color", "wrap_help" ]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
