[package]
name = "dwim_path_expand"
version = "0.1.0"
authors = ["Brent Sanders <git@thoughtnoise.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Automagically (DWIM) expands incomplete file paths to the \"obvious\" files you (theoretically) meant to use."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "~0.3.0"
walkdir = "2"

[dependencies.clap]
version = "~2.33.0"
default-features = false
features = []

[profile.release]
#strip = true
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
