[package]
name = "dwim_path_expand"
version = "0.2.0"
authors = ["Brent Sanders <git@thoughtnoise.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Automagically (DWIM) expands incomplete file paths to the \"obvious\" files you (theoretically) meant to use."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob-match = "0.2.1"
walkdir = "2"

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ['cargo', 'std']

[profile.release]
#strip = true
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
